Arrays: 3 Three Sum

--- a/statistics.vm
+++ b/statistics.vm
@@ -5,5 +5,25 @@
 September 2018
 13.09 - 35,66
 14.09 - 189, 11
-18.09 - 1
+18.09 - 1, 15
+21.09 - 15 (finished)
+
+1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
+Это важно!!!
+Мозг пытается найти похожую задачу, решение которой он знает, и выдать за требуемое.
+2) Пытаемся придумать уточняющие вопросы.
+3) Рисуем примеры, лучше парочку — один классический, второй с corner cases.
+После этого мы +/- должны быть уверены в том, что задачу мы поняли правильно.
+4) Придумываем решение «в лоб» и оцениваем его сложность.
+Сложность решения нужно уметь определить всегда.
+5) Придумываем более оптимальное решение, оцениваем его сложность.
+6) Разрабатываем API решения — какие будут методы (приватные и публичные).
+7) Пишем код в тетрадке.
+8) Дебажим код по тетрадке на новом примере. Не нужно брать один из примеров, который мы рисовали в начале.
+В этом случае очень высока вероятность, что мы написали решение именно для этого случая, а не для всех возможных.
+Лучше взять новый пример с corner-кейсом, такой, чтобы потенциально мог решение сломать.
+9) Перебиваем код в любимую IDE, при этом не смотрим в бумажку. Таким образом, мы повторяем решение два раза.
+10) Копируем код из IDE в LeetCode и запускаем. В случае идеального выполнения должно cработать правильно с первого раза.
+У меня такое получалось в 10% случаев.
+
 
