--- a/statistics.vm
+++ b/statistics.vm
@@ -5,9 +5,10 @@
 September 2018
 13.09 - 35,66
 14.09 - 189, 11
-18.09 - 1, 15
-21.09 - 15 (finished)
-22.09 - 18
+18.09 - 1, 15(M)
+21.09 - 15(M) (finished)
+22.09 - 18(M)
+24.09 - 3(H)
 
 1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
 Это важно!!!
