--- a/statistics.vm
+++ b/statistics.vm
@@ -1,6 +1,6 @@
 30% easy,
-50% medium,
-20% hard
+40% medium,
+30% hard
 
 September 2018
 13.09 - 35,66
@@ -9,15 +9,15 @@ September 2018
 21.09 - 15(M) (finished)
 22.09 - 18(M)
 24.09 - 3(H), 76(H)
+03.10 - 438(E)
 
-1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
-Это важно!!!
+
+1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.Это важно!!!
 Мозг пытается найти похожую задачу, решение которой он знает, и выдать за требуемое.
 2) Пытаемся придумать уточняющие вопросы.
 3) Рисуем примеры, лучше парочку — один классический, второй с corner cases.
 После этого мы +/- должны быть уверены в том, что задачу мы поняли правильно.
-4) Придумываем решение «в лоб» и оцениваем его сложность.
-Сложность решения нужно уметь определить всегда.
+4) Придумываем решение «в лоб» и оцениваем его сложность. Сложность решения нужно уметь определить всегда.
 5) Придумываем более оптимальное решение, оцениваем его сложность.
 6) Разрабатываем API решения — какие будут методы (приватные и публичные).
 7) Пишем код в тетрадке.
