819 Most Common Word (E) 242 Valid Anagram (E)

--- a/statistics.vm
+++ b/statistics.vm
@@ -1,7 +1,3 @@
-30% easy,
-40% medium,
-30% hard
-
 September 2018
 13.09 - 35,66
 14.09 - 189, 11
@@ -9,17 +5,18 @@ September 2018
 21.09 - 15(M) (finished)
 22.09 - 18(M)
 24.09 - 3(H), 76(H)
+
+October 2018
 03.10 - 438(E)
 04.10 - 3(M)
 17.10 - 30(H)
 19.10 - 451(M)
+23.10 - 242(E), 819(E)
 
 
-1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.Это важно!!!
-Мозг пытается найти похожую задачу, решение которой он знает, и выдать за требуемое.
+1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
 2) Пытаемся придумать уточняющие вопросы.
 3) Рисуем примеры, лучше парочку — один классический, второй с corner cases.
-После этого мы +/- должны быть уверены в том, что задачу мы поняли правильно.
 4) Придумываем решение «в лоб» и оцениваем его сложность. Сложность решения нужно уметь определить всегда.
 5) Придумываем более оптимальное решение, оцениваем его сложность.
 6) Разрабатываем API решения — какие будут методы (приватные и публичные).
@@ -28,8 +25,7 @@ September 2018
 В этом случае очень высока вероятность, что мы написали решение именно для этого случая, а не для всех возможных.
 Лучше взять новый пример с corner-кейсом, такой, чтобы потенциально мог решение сломать.
 9) Перебиваем код в любимую IDE, при этом не смотрим в бумажку. Таким образом, мы повторяем решение два раза.
-10) Копируем код из IDE в LeetCode и запускаем. В случае идеального выполнения должно cработать правильно с первого раза.
-У меня такое получалось в 10% случаев.
+10) Копируем код из IDE в LeetCode и запускаем.
 
 
 *) OpenJDK doesn't install javaFX by default. Some classes in this repo use javafx.util.Pair.
