First Unique Character in a String 387 (E)

--- a/statistics.vm
+++ b/statistics.vm
@@ -15,6 +15,9 @@ October 2018
 25.10 - 56(M), 349 (E)
 26.10 - 57(H)
 
+February 2019
+16.02 - 387(E)
+
 
 1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
 2) Пытаемся придумать уточняющие вопросы.
