--- a/statistics.vm
+++ b/statistics.vm
@@ -23,6 +23,9 @@ February 2019
 16.02 - 325(M)
 18.02 - 238(M)
 
+March 2019
+03.03 - 394(M) Decode String
+
 
 1) Читаем условие задачи, ни в коем случае не пытаемся придумать решение до того, как условие прочитано до конца.
 2) Пытаемся придумать уточняющие вопросы.
