256 Paint House (E) DP

--- a/statistics.vm
+++ b/statistics.vm
@@ -25,7 +25,8 @@ February 2019
 
 March 2019
 03.03 - 394(M) Decode String
-06.03 - 70(M) Easy
+06.03 - 70(E) ClimbingStairs
+07.03 - 256(E) Paint House
 
 
 1) Read problem definition carefully
