121(E) Best Time to Buy and Sell Stock - dp, divide-and-conquer

--- a/statistics.vm
+++ b/statistics.vm
@@ -27,6 +27,7 @@ March 2019
 03.03 - 394(M) Decode String
 06.03 - 70(E) ClimbingStairs
 07.03 - 256(E) Paint House
+09.03 - 121(E) Best Time to Buy and Sell Stock
 
 
 1) Read problem definition carefully
