--- a/statistics.vm
+++ b/statistics.vm
@@ -28,6 +28,7 @@ March 2019
 06.03 - 70(E) ClimbingStairs
 07.03 - 256(E) Paint House
 09.03 - 121(E) Best Time to Buy and Sell Stock
+10.03 - 746(E) Min Cost Climbing Stairs
 
 
 1) Read problem definition carefully
