53(E) Maximum Subarray - DP O(n)

--- a/statistics.vm
+++ b/statistics.vm
@@ -29,6 +29,7 @@ March 2019
 07.03 - 256(E) Paint House
 09.03 - 121(E) Best Time to Buy and Sell Stock
 10.03 - 746(E) Min Cost Climbing Stairs
+11.03 - 53(E) Maximum Subarray
 
 
 1) Read problem definition carefully
