--- a/statistics.vm
+++ b/statistics.vm
@@ -30,6 +30,7 @@ March 2019
 09.03 - 121(E) Best Time to Buy and Sell Stock
 10.03 - 746(E) Min Cost Climbing Stairs
 11.03 - 53(E) Maximum Subarray
+15.03 - FixedArrayQueue, DynamicArrayQueue, Moving Average
 
 
 1) Read problem definition carefully
