--- a/statistics.vm
+++ b/statistics.vm
@@ -34,6 +34,7 @@ March 2019
 13.03 - 303(E) Range Sum Query - Immutable
 15.03 - FixedArrayQueue, DynamicArrayQueue, Moving Average
 16.03 - BinaryTreePreOrderTraversal, BinaryTreeInOrderTraversal
+21.03 - BinaryLevelOrderTraversal, BinaryPostOrderTraversal
 
 
 1) Read problem definition carefully
