--- a/statistics.vm
+++ b/statistics.vm
@@ -35,6 +35,7 @@ March 2019
 15.03 - FixedArrayQueue, DynamicArrayQueue, Moving Average
 16.03 - BinaryTreePreOrderTraversal, BinaryTreeInOrderTraversal
 21.03 - BinaryLevelOrderTraversal, BinaryPostOrderTraversal
+22.03 - BinaryTreeMaxDepth
 
 
 1) Read problem definition carefully
