--- a/statistics.vm
+++ b/statistics.vm
@@ -36,7 +36,7 @@ March 2019
 16.03 - BinaryTreePreOrderTraversal, BinaryTreeInOrderTraversal
 21.03 - BinaryLevelOrderTraversal, BinaryPostOrderTraversal
 22.03 - BinaryTreeMaxDepth
-24.03 - SimmetricTree
+24.03 - SimmetricTree, PathSum
 
 
 1) Read problem definition carefully
