ConstructBinaryTreeFromInorderAndPostOrder Recursive, ConstructBinaryTreeFromInorderAndPreOrder Recursive

--- a/statistics.vm
+++ b/statistics.vm
@@ -37,6 +37,8 @@ March 2019
 21.03 - BinaryLevelOrderTraversal, BinaryPostOrderTraversal
 22.03 - BinaryTreeMaxDepth
 24.03 - SimmetricTree, PathSum
+25.03 - Count Univalue Subtrees
+01.04 - ConstructBinaryTreeFromInorderAndPostOrder Recursive, ConstructBinaryTreeFromInorderAndPreOrder Recursive
 
 
 1) Read problem definition carefully
