Construct Binary Tree from Preorder and Inorder Traversal Iterative, Construct Binary Tree from Postorder and Inorder Traversal Iterative

--- a/statistics.vm
+++ b/statistics.vm
@@ -39,6 +39,7 @@ March 2019
 24.03 - SimmetricTree, PathSum
 25.03 - Count Univalue Subtrees
 01.04 - ConstructBinaryTreeFromInorderAndPostOrder Recursive, ConstructBinaryTreeFromInorderAndPreOrder Recursive
+03.04 - ConstructBinaryTreeFromInorderAndPostOrder Iterative, ConstructBinaryTreeFromInorderAndPreOrder Iterative
 
 
 1) Read problem definition carefully
