297 (H) Serialize and Deserialize Binary Tree

--- a/statistics.vm
+++ b/statistics.vm
@@ -45,6 +45,7 @@ March 2019
 07.04 - 2(M) Add Two Numbers
 20.04 - 200(M) Number of Islands
 21.04 - 117(M) Populating Next Right Pointers in Each Node II, 236(M) Lowest Common Ancestor of a Binary Tree
+23.04 - 297(H) Serialize and Deserialize Binary Tree
 
 
 
