752 (M) Open the Lock

--- a/statistics.vm
+++ b/statistics.vm
@@ -46,6 +46,7 @@ March 2019
 20.04 - 200(M) Number of Islands DFS
 21.04 - 117(M) Populating Next Right Pointers in Each Node II, 236(M) Lowest Common Ancestor of a Binary Tree
 23.04 - 297(H) Serialize and Deserialize Binary Tree, 200(M) Number of Islands BFS
+07.05 - 752(M) Open The Lock (BFS)
 
 
 
