279 (M) Perfect Squares BFS

--- a/statistics.vm
+++ b/statistics.vm
@@ -46,7 +46,7 @@ March 2019
 20.04 - 200(M) Number of Islands DFS
 21.04 - 117(M) Populating Next Right Pointers in Each Node II, 236(M) Lowest Common Ancestor of a Binary Tree
 23.04 - 297(H) Serialize and Deserialize Binary Tree, 200(M) Number of Islands BFS
-07.05 - 752(M) Open The Lock (BFS)
+07.05 - 752(M) Open The Lock (BFS), 279 (M) Perfect Squares
 
 
 
@@ -59,6 +59,7 @@ March 2019
 7) Write code on whiteboard/paper
 8) Debug code on whiteboard/paper with new test cases
 9) Copy code to the IDE and run in
+
 *) OpenJDK doesn't install javaFX by default. Some classes in this repo use javafx.util.Pair.
 You have to install javaFX manually (for example):
 https://stackoverflow.com/questions/27178895/cannot-resolve-symbol-javafx-application-in-intellij-idea-ide
