--- a/statistics.vm
+++ b/statistics.vm
@@ -47,6 +47,7 @@ March 2019
 21.04 - 117(M) Populating Next Right Pointers in Each Node II, 236(M) Lowest Common Ancestor of a Binary Tree
 23.04 - 297(H) Serialize and Deserialize Binary Tree, 200(M) Number of Islands BFS
 07.05 - 752(M) Open The Lock (BFS), 279 (M) Perfect Squares
+08.05 - 20(E) Valid Parentheses, 739 (M) Daily Temperatures
 
 
 
