494 (M) Target Sum, 394 (M) Decode String,733 (E) Flood Fill

--- a/statistics.vm
+++ b/statistics.vm
@@ -49,6 +49,9 @@ March 2019
 07.05 - 752(M) Open The Lock (BFS), 279 (M) Perfect Squares
 08.05 - 20(E) Valid Parentheses, 739 (M) Daily Temperatures, 150 (M) Evaluate Reverse Polish Notation
 09.05 - 131(M) Clone Graph
+10.05 - 494(M) Target Sum
+11.05 - 394(M) Decode String
+12.05 - 733(E) Flood Fill
 
 
 
