542 (M) 01 Matrix, 841 (M) Keys and Rooms,

--- a/statistics.vm
+++ b/statistics.vm
@@ -51,7 +51,7 @@ March 2019
 09.05 - 131(M) Clone Graph
 10.05 - 494(M) Target Sum
 11.05 - 394(M) Decode String
-12.05 - 733(E) Flood Fill
+12.05 - 733(E) Flood Fill, 542 (M) 01 Matrix, 841 (M) Keys and Rooms
 
 
 
