344(E) Reverse String (recursive), 24 (M) SwapNodesInPairs, 118 (E)Pascal's Triangle

--- a/statistics.vm
+++ b/statistics.vm
@@ -52,6 +52,7 @@ March 2019
 10.05 - 494(M) Target Sum
 11.05 - 394(M) Decode String
 12.05 - 733(E) Flood Fill, 542 (M) 01 Matrix, 841 (M) Keys and Rooms
+13.05 - 344(E) Reverse String (recursive), 24 (M) SwapNodesInPairs, 118 (E)Pascal's Triangle
 
 
 
